assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,700;1,900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: antiquewhite;
    color: black;
    font-family: 'Merriweather', sans-serif;
}

/* Header */
#header {
    text-align: right;
    padding: 20px;
    width: 100%;
    display: flex;
    justify-content: right;
    flex-direction: column;
    background-color: burlywood;
}

header a {
    text-decoration: none;
    color: inherit;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    display: inline;
    padding: 10px;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    width: 100%;
    left: 0;
    padding: 0;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main */
#intro {
    padding:20px 0 20px;
}

#biography {
    display: flex;
    flex-direction: column;
}

.flex-container {
    display: flex;
    flex-direction: column;
}

.bioright {
    justify-content: right;
    align-items: flex-end;
    text-align: right;
}

.responsive {
    width: 100%;
    height: auto;
    max-width:100%;
  }

  .section {
    padding: 30px 10px 30px;
  }

/* ---Media queries--- */

/* Media Queries: Tablets */
@media screen and (min-width: 768px) {
    #biography {
        flex-direction: row;
    }
    .nav-toggle-label {
        display: none;
    }
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
    }

    #menu {
        display: flex;
        flex-wrap: wrap;
    }
}

/* Media Queries: Laptops & Desktops */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }   
    }

